Renamed to templant

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@joshmoody24/transplate",
+  "name": "@joshmoody24/templant",
   "version": "0.0.1",
   "description": "Translate between different template languages",
   "keywords": [
