--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "templant",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Translate between different template languages",
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "eslint": "^9.34.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
   }
 }
